UI change...little more margin, no double-line issues on slightly longer labels...thinking it looks better all around, maybe we can wrap <label>'s around all the labels?
git-svn-id: https://plugins.svn.wordpress.org/wp-e-commerce/branches/3.8-development@316923 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/wpsc-admin/css/admin.css
+++ b/wpsc-admin/css/admin.css
@@ -266,6 +266,10 @@ div.wpsc_floatleft{
 	width:161px;
 	float:left;
 }
+div.wpsc_floatleft label {
+    line-height: 18px;
+    white-space: nowrap;
+}
 
 /*  Sortable product styling*/
 
